Fix various JDK11 warnings.
Specially, removed the usage of java.security.acl.Group, since it's
deprecated and will be removed (we can already see in later JDK versions
it's indeed remove there). Replaced it with a replacement class.

Also deprecated the one usage of a finalizer, and updated several poms
that were explicitly referring to ancient Java versions (at the time
they were intended for newer versions than the main version)

Signed-off-by: arjantijms <arjan.tijms@gmail.com>